Переименовал правильно класс

--- a/IntecoAG.XafExt/IntecoAG.XafExt.csproj
+++ b/IntecoAG.XafExt/IntecoAG.XafExt.csproj
@@ -82,7 +82,7 @@
   <ItemGroup>
     <Compile Include="ConverterType2FullNameString.cs" />
     <Compile Include="DatabaseUpdate\Updater.cs" />
-    <Compile Include="EmcDocument.cs" />
+    <Compile Include="Ecm\EcmDocument.cs" />
     <Compile Include="IagXafExtModule.cs">
       <SubType>Component</SubType>
     </Compile>
