--- a/IntecoAG.XafExt.Tests/IntecoAG.XafExt.Tests.Module.Win/IntecoAG.XafExt.Tests.Module.Win.csproj
+++ b/IntecoAG.XafExt.Tests/IntecoAG.XafExt.Tests.Module.Win/IntecoAG.XafExt.Tests.Module.Win.csproj
@@ -217,7 +217,6 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Model.DesignedDiffs.xafml" />
-    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="WinModule.resx">
       <DependentUpon>WinModule.cs</DependentUpon>
     </EmbeddedResource>
@@ -238,14 +237,18 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\IntecoAG.XafExt.Win\IntecoAG.XafExt.Win.csproj">
-      <Project>{C5728AC8-50E4-4703-9D29-5741CA2FE8D1}</Project>
-      <Name>IntecoAG.XafExt.Win</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\IntecoAG.XafExt.Spreadsheet\IntecoAG.XafExt.Spreadsheet\IntecoAG.XafExt.Spreadsheet.csproj">
       <Project>{5F15837D-D1E5-44DC-92F0-4F2EBE9C3F8D}</Project>
       <Name>IntecoAG.XafExt.Spreadsheet</Name>
       <Private>True</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\IntecoAG.XafExt.Win\IntecoAG.XafExt.Win.csproj">
+      <Project>{c5728ac8-50e4-4703-9d29-5741ca2fe8d1}</Project>
+      <Name>IntecoAG.XafExt.Win</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IntecoAG.XafExt.Tests.Module\IntecoAG.XafExt.Tests.Module.csproj">
+      <Project>{a3ce18f9-2e3d-42c6-a5c6-b7feac6f42c7}</Project>
+      <Name>IntecoAG.XafExt.Tests.Module</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
